tests/parse_print/random_perturb/set01/delete-04/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/delete-04/delete-04.essence:3:1:
unexpected :
    find  : set (size 2) of int(1..3)
    ^^^^^^^